--- a/pom.xml
+++ b/pom.xml
@@ -222,7 +222,7 @@
                             <transformers>
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>com.bl.MainTest</mainClass>
+                                    <mainClass>com.bl.MailTask</mainClass>
                                 </transformer>
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
